# SlopControl

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design_patterns.md  installation.md  mcp_setup.md  quickstart.md
examples/: gear_mechanism.py  parametric_enclosure.py  plan_forge.md  simple_bracket.py  slop_control.md
src/cadai/: __init__.py  __main__.py  agent.py  cli.py  tui.py
src/cadai/mcp/: __init__.py  server.py  tools.py
src/cadai/memory/: AGENTS.md
src/cadai/providers/: registry.py
src/cadai/skills/templates/: housing_enclosure.py  parametric_plate.py  screw_mount.py
src/cadai/tools/: cad.py  design_history.py  file_ops.py  git_ops.py  session_manager.py  visualization.py
src/cadai/utils/: terminal.py  terminal_display.py
src/planforge/: __init__.py  __main__.py  agent.py  cli.py  tui.py
src/planforge/core/domain_base/: __init__.py  agent_factory.py  plugin.py  session.py
src/planforge/core/execution/: sandbox.py
src/planforge/core/gateway/: config.py  fallback.py  local_discovery.py  server.py
src/planforge/core/knowledge/: backends.py
src/planforge/core/orchestrator/: competition.py  conductor.py  cost_tracker.py  dispatch.py  handoff.py  persistence.py  registry.py  state.py  truth_db.py
src/planforge/core/plan/: generator.py  schema.py
src/planforge/core/providers/: registry.py
src/planforge/domains/cad/: __init__.py  agent_prompt.md  plugin.py
src/planforge/domains/cad/skills/templates/: cable_gland.py
src/planforge/domains/cad/tools/: design_history.py  file_ops.py  git_ops.py  session_manager.py  visualization.py
src/planforge/domains/cad/utils/: cad_helpers.py
src/planforge/domains/cad/verify/: assembly.py  geometry.py  mechanical.py  printability.py
src/planforge/domains/code/: __init__.py  plugin.py
src/planforge/domains/code/tools/: code.py  git_ops.py
src/planforge/domains/code/verify/: coverage.py  mypy.py  pytest.py
src/planforge/integrations/: claude.py  opencode.py
src/planforge/integrations/mcp/: __init__.py  server.py  tools.py
src/planforge/mcp/: server.py  tools.py
src/planforge/providers/: registry.py
src/planforge/skills/: SKILL.md
src/planforge/tools/: cad.py  design_history.py  file_ops.py  git_ops.py  visualization.py
src/planforge/utils/: cad_helpers.py  terminal.py  terminal_display.py
src/slopcontrol/: __init__.py  __main__.py  agent.py  cli.py  tui.py
src/slopcontrol/core/domain_base/: __init__.py  agent_factory.py  plugin.py
src/slopcontrol/core/execution/: __init__.py  contract.py  monitor.py  sandbox.py
src/slopcontrol/core/feedback/: observer.py
src/slopcontrol/core/gateway/: __init__.py  config.py  local_discovery.py  router.py  server.py
src/slopcontrol/core/knowledge/: __init__.py  backends.py  graph.py  indexer.py  ingest.py  raptor.py  retriever.py
src/slopcontrol/core/memory/: AGENTS.md
src/slopcontrol/core/orchestrator/: __init__.py  competition.py  conductor.py  cost_tracker.py  dispatch.py  handoff.py  judge.py  persistence.py  protocol.py  registry.py  state.py  truth_db.py
src/slopcontrol/core/plan/: __init__.py  generator.py  loader.py  renderer.py  schema.py  versioner.py
src/slopcontrol/core/planning/: prompts.py  session.py
src/slopcontrol/core/providers/: registry.py
src/slopcontrol/core/utils/: terminal.py  terminal_display.py
src/slopcontrol/core/verify/: base.py
src/slopcontrol/daemon/: server.py  state.py
src/slopcontrol/domains/cad/: __init__.py  agent_prompt.md  plugin.py
src/slopcontrol/domains/cad/tools/: cad.py  design_history.py  file_ops.py  git_ops.py  session_manager.py  visualization.py
src/slopcontrol/domains/cad/verify/: __init__.py  assembly.py  geometry.py  mechanical.py  printability.py
src/slopcontrol/domains/code/: agent_prompt.md  plugin.py
src/slopcontrol/domains/code/tools/: __init__.py  dependency_manager.py  file_ops.py  git_ops.py  test_runner.py
src/slopcontrol/domains/code/verify/: __init__.py  coverage.py  mypy.py  pytest.py
src/slopcontrol/integrations/: __init__.py  base.py  claude.py  cursor.py  opencode.py
src/slopcontrol/integrations/mcp/: __init__.py  server.py  tools.py
src/slopcontrol/mcp/: tools.py
src/slopcontrol/providers/: registry.py
src/slopcontrol/tools/: cad.py  design_history.py  file_ops.py  git_ops.py  visualization.py
src/slopcontrol/tui/: app.py
src/slopcontrol/utils/: cad_helpers.py
tests/integration/: test_agent_workflow.py
tests/unit/: test_agent.py  test_cad_helpers.py  test_cad_tools.py  test_daemon_tui.py  test_file_ops.py  test_git_ops.py  test_providers.py  test_visualization.py
tests/unit/core/: test_competition.py  test_orchestrator.py  test_plugin_registry.py
