[project]
name = "slopcontrol"
version = "0.3.0"
description = "SlopControl — agentic development through plan-controlled verification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brett Chaldecott"}
]
keywords = ["plan", "orchestrator", "ai", "agent", "llm", "langchain", "software", "development", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "deepagents>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=0.1.0",
    "typer[all]>=0.12.0",
    "gitpython>=3.1.40",
    "structlog>=24.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "qdrant-client[fastembed]>=1.17.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
slopcontrol = "slopcontrol.cli:main"

[project.urls]
Homepage = "https://github.com/brettchaldecott/SlopControl"
Documentation = "https://github.com/brettchaldecott/SlopControl#readme"
Repository = "https://github.com/brettchaldecott/SlopControl.git"
Issues = "https://github.com/brettchaldecott/SlopControl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slopcontrol"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "RUF",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
